--- a/crates/emesh-cli/Cargo.toml
+++ b/crates/emesh-cli/Cargo.toml
@@ -9,8 +9,10 @@ description = "CLI tool for processing 3D polygon meshes."
 
 
 [dependencies]
-emesh = { version = "0.0.1-alpha.4", path = "../emesh" }
+emesh = { version = "0.0.1-alpha.8", path = "../emesh" }
 
+thiserror = { workspace = true }
+anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
